--- a/package.json
+++ b/package.json
@@ -10,8 +10,50 @@
     "test": "jest"
   },
   "dependencies": {
+    "@animatereactnative/marquee": "^0.5.2",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-clipboard/clipboard": "^1.16.1",
+    "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native-community/hooks": "^100.1.0",
+    "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-community/slider": "^4.5.6",
+    "@react-navigation/drawer": "^7.1.2",
+    "@react-navigation/native": "^7.0.15",
+    "@react-navigation/native-stack": "^7.2.1",
+    "@reduxjs/toolkit": "^2.6.0",
+    "@twotalltotems/react-native-otp-input": "^1.3.11",
+    "axios": "^1.8.1",
+    "date-fns": "^4.1.0",
+    "deprecated-react-native-prop-types": "^2.2.0",
+    "expo-checkbox": "^4.0.1",
+    "html-to-text": "^9.0.5",
+    "lottie-react-native": "^7.2.2",
+    "moment": "^2.30.1",
+    "posthog-react-native": "^3.11.2",
     "react": "19.0.0",
-    "react-native": "0.78.0"
+    "react-native": "0.78.0",
+    "react-native-blob-util": "^0.21.2",
+    "react-native-calendars": "^1.1310.0",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-device-info": "^14.0.4",
+    "react-native-element-dropdown": "^2.12.4",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-gesture-handler": "^2.24.0",
+    "react-native-inappbrowser-reborn": "^3.7.0",
+    "react-native-localize": "^3.4.1",
+    "react-native-modal": "^13.0.1",
+    "react-native-pdf": "^6.7.7",
+    "react-native-progress": "^5.0.1",
+    "react-native-reanimated": "^3.17.0",
+    "react-native-render-html": "^6.3.4",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.9.1",
+    "react-native-svg": "^15.11.2",
+    "react-native-text-ticker": "^1.14.0",
+    "react-native-webview": "^13.13.2",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -30,6 +72,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "19.0.0",
     "typescript": "5.0.4"
   },
