--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@react-native-community/hooks": "^100.1.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-community/slider": "^4.5.6",
+    "@react-native-firebase/analytics": "^21.12.0",
+    "@react-native-firebase/app": "^21.12.0",
+    "@react-native-firebase/messaging": "^21.12.0",
     "@react-navigation/drawer": "^7.1.2",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
@@ -27,7 +30,6 @@
     "deprecated-react-native-prop-types": "^2.2.0",
     "expo-checkbox": "^4.0.1",
     "html-to-text": "^9.0.5",
-    "lottie-react-native": "^7.2.2",
     "moment": "^2.30.1",
     "posthog-react-native": "^3.11.2",
     "react": "19.0.0",
@@ -38,6 +40,7 @@
     "react-native-device-info": "^14.0.4",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-fast-image": "^8.6.3",
+    "react-native-file-viewer": "^2.1.5",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-localize": "^3.4.1",
