--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -128,3 +128,5 @@ dependencies {
         implementation jscFlavor
     }
 }
+
+apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
