--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
     "@reduxjs/toolkit": "^2.6.0",
+    "@rneui/base": "^4.0.0-rc.8",
+    "@rneui/themed": "^4.0.0-rc.8",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "axios": "^1.8.1",
     "date-fns": "^4.1.0",
@@ -42,18 +44,28 @@
     "react-native-fast-image": "^8.6.3",
     "react-native-file-viewer": "^2.1.5",
     "react-native-gesture-handler": "^2.24.0",
+    "react-native-in-app-review": "^4.3.5",
     "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-localize": "^3.4.1",
     "react-native-modal": "^13.0.1",
+    "react-native-orientation-locker": "^1.7.0",
+    "react-native-pager-view": "^6.7.0",
     "react-native-pdf": "^6.7.7",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^3.17.0",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.1",
+    "react-native-sound-player": "^0.14.5",
+    "react-native-sse": "^1.2.1",
     "react-native-svg": "^15.11.2",
+    "react-native-tab-view": "^4.0.5",
     "react-native-text-ticker": "^1.14.0",
+    "react-native-tts": "^4.1.1",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.13.2",
+    "react-native-youtube": "^2.0.2",
+    "react-query": "^3.39.3",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
     "yup": "^1.6.1"
@@ -76,6 +88,7 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-native-dotenv": "^3.4.11",
+    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "19.0.0",
     "typescript": "5.0.4"
   },
