--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@reduxjs/toolkit": "^2.6.0",
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
+    "@sentry/react-native": "^6.10.0",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "axios": "^1.8.1",
     "date-fns": "^4.1.0",
