--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "deprecated-react-native-prop-types": "^2.2.0",
     "expo-checkbox": "^4.0.1",
     "html-to-text": "^9.0.5",
+    "lottie-react-native": "^7.2.2",
     "moment": "^2.30.1",
     "posthog-react-native": "^3.11.2",
     "react": "19.0.0",
