--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,8 @@
 buildscript {
     ext {
+        googlePlayServicesVersion = "+" // default: "+"
+        firebaseMessagingVersion = "21.1.0" // default: "21.1.0"
+
         buildToolsVersion = "35.0.0"
         minSdkVersion = 24
         compileSdkVersion = 35
