--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-community/hooks": "^100.1.0",
     "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-community/push-notification-ios": "^1.11.0",
     "@react-native-community/slider": "^4.5.6",
     "@react-native-firebase/analytics": "^21.12.0",
     "@react-native-firebase/app": "^21.12.0",
@@ -54,6 +55,7 @@
     "react-native-pager-view": "^6.7.0",
     "react-native-pdf": "^6.7.7",
     "react-native-progress": "^5.0.1",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^3.17.0",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^5.3.0",
