rn fetch blob installed

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "posthog-react-native": "^3.11.2",
     "react": "19.0.0",
     "react-native": "0.78.0",
-    "react-native-blob-util": "^0.21.2",
+    "react-native-blob-util": "0.19.9",
     "react-native-calendars": "^1.1310.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-device-info": "^14.0.4",
